[package]
name = "pngme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
crc = "3.0"
clap = {version = "4.1.6", features = ["derive"]}
url = "2.3.1"
reqwest = {version = "0.11.14", features = ["blocking"]}